Fix collapsing of footer through styling

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -3,6 +3,10 @@
 
 $base-color: #eeeeee;
 
+html, body {
+  height: 100%;
+}
+
 #main {
   padding-top: 6em;
 }
