--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -2,7 +2,7 @@
 ---
 
 .SiteFooter__root {
-    height: 70px;
+    min-height: 70px;
     padding: 5px 0;
     border-top: 1px solid black;
 }
