--- a/assets/css/nav.scss
+++ b/assets/css/nav.scss
@@ -13,7 +13,7 @@ $base-color: #eeeeee;
 
 .SiteHeader__root {
     border-bottom: 1px solid black;
-    height: 83px;
+    min-height: 83px;
     padding: 10px 0;
 }
 
